<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.austin.kanadrill.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/kanaTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/default_kana"
            android:textColor="@android:color/black"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/hintTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/default_hint"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/shownTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/default_shown"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/syllableEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:ems="3"
            android:gravity="center"
            android:inputType="text"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/rightTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/default_right"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/settingsImageView"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/gear_icon_content_description"
        android:onClick="openSettings"
        android:tint="#737373"
        app:srcCompat="@drawable/ic_settings_black_24dp" />

</RelativeLayout>
